tests/codegen/fail/interface/struct/derive_field_double_underscored.rs
use coasys_juniper::GraphQLInterface;

#[derive(GraphQLInterface)]
struct Character {
    __id: String,
}

fn main() {}
